# helper-bot

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  package-lock.json  pyproject.toml  serverless.yml
.github/workflows/: pre-commit.yml
app/: bot.py  factory.py  main.py  schedule.py  settings.py
app/api/: factory.py
app/api/routes/: webhook.py
app/bot/: factory.py
app/bot/api/: factory.py
app/bot/api/routes/: webhook.py
app/bot/dialogs/: __init__.py  chat.py  registration.py
app/bot/dialogs/windows/: chat.py  registration.py
app/bot/enums/: todo_types.py
app/bot/filters/: in_database.py
app/bot/handlers/: __init__.py  chat.py  help.py  info.py  registration.py  start.py  view.py
app/bot/handlers/private/: __init__.py  add_birthday.py  add_birthday_admin.py  add_birthday_manualy.py  db.py  help.py  start.py  tags.py  todo.py
app/bot/keyboard/: approve_keyboards.py  clock.py  todo_type_keyboard.py
app/bot/keyboard/types/: approve_birthday_keyboard.py  approves.py  clock.py  todo.py
app/bot/keyboards/: chat.py  registration.py
app/bot/messages/: add_bd_msgs.py  admin.py  enviroment.py  enviromnent.py  general.py  help.py  registration.py  start.py  todo.py  view.py
app/bot/states/: register.py  todo.py
app/services/: database_api.py  datebase_api.py  example.py
app/services/types/: student.py
app/utils/: commands.py  date_service.py  dateutils.py  send_answer.py  states.py
app/utils/callbacks/: chat.py  registration.py
app/utils/database/: api.py  engine.py
app/utils/database/models/: __init__.py  base.py  user.py
app/utils/enums/: role.py
app/utils/migrations/: env.py
app/utils/migrations/versions/: 2024_09_16_2251-af48935b0a3b_creating_users_table.py  2024_09_17_0029-f70f0ce2bcb3_making_user_role_nullable.py  2024_09_17_0103-9fe4d89c45d4_adding_telegram_id_to_users_table.py  2024_09_18_1645-10d259ce6106_adding_birthday_to_users_table.py  2024_09_18_1709-a71b259b46ba_updating_birthday_colomn_in_users_table.py  2024_09_18_1933-1e9a54582d11_updating_telegram_id_colomn_in_users_.py  (+2 more)
app/utils/states/: chat.py  registration.py
src/helper_bot/: __init__.py
