[tool.poetry]
name = "helper-bot"
version = "0.1.0"
description = ""
authors = ["Oleksandr Nychyk <nychyk.oleksandr@lll.kpi.ua>", "Volodymyr Klimchuk <ke1wi.ua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
pydantic-settings = "^2.1.0"
fastapi = "^0.109.0"
ngrok = "^0.12.1"
ruff = "^0.1.15"
mypy = "^1.8.0"
uvicorn = "^0.27.0.post1"
jinja2 = "^3.1.3"
redis = "^5.0.1"
emoji = "^2.10.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
