[project]
name = "helper-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Volodymyr Klimchuk", email = "klimchuk.volodymyr@lll.kpi.ua" }
]
dependencies = [
    "aiogram>=3.13.0",
    "pydantic-settings>=2.5.2",
    "pydantic==2.8",
    "fastapi[standard]>=0.114.1",
    "ngrok>=1.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/helper_bot"]
