[project]
name = "helper-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Volodymyr Klimchuk", email = "klimchuk.volodymyr@lll.kpi.ua" }
]
dependencies = [
    "aiogram>=3.13.0",
    "pydantic-settings>=2.5.2",
    "pydantic==2.8",
    "fastapi[standard]>=0.114.1",
    "ngrok>=1.4.0",
    "aiogram-dialog>=2.1.0",
    "apscheduler>=3.10.4",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.34",
    "alembic>=1.13.2",
    "greenlet>=3.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.5",
    "black>=24.8.0",
    "colorama>=0.4.6",
    "mypy>=1.11.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/helper_bot"]
